[project]
name = "renewable-energy-systems"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.3.2",
    "statsmodels>=0.14.1",
    "tueplots>=0.0.14",
    "xgboost>=2.1.4",
]
